Change: save first 4 columns instead of 3, other columns as json